bpo-38175: Fix a memory leak in comparison of sqlite3.Row objects. (GH-16155) (cherry picked from commit 8debfa50407107ff2329d01081cdc12d359f1d12)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>